--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_ui_auth: ^1.13.1
   provider: ^6.1.2
   cloud_firestore: ^4.15.10
+  firebase_ui_oauth_google: ^1.3.1
 
 dev_dependencies:
   flutter_test:
